WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209644
Deduplicate WebsiteDataStore::parameters() of Cocoa port and non-Cocoa port
https://bugs.webkit.org/show_bug.cgi?id=209644
Summary
Deduplicate WebsiteDataStore::parameters() of Cocoa port and non-Cocoa port
Fujii Hironori
Reported
2020-03-27 01:02:13 PDT
[WinCairo] ASSERT(m_resourceLoadStatistics) is failing setThirdPartyCookieBlockingMode WinCairo WTR is still failing the assertion even after
r259076
which fixed the same assertion failure. WinCairo, debug builds, trunk@259081 fast/dom/window-open-ephemeral.html http/tests/adClickAttribution/store-disabled-in-ephemeral-session.html http/tests/cache/disk-cache/disk-cache-vary-cookie-private.html http/tests/security/cookies/third-party-cookie-blocking-redirect.html http/tests/security/cookies/third-party-cookie-blocking-user-action.html http/tests/security/cookies/third-party-cookie-blocking.html storage/indexeddb/aborted-versionchange-closes-private.html storage/indexeddb/basics-private.html storage/indexeddb/clone-exception-private.html storage/indexeddb/closed-cursor-private.html storage/indexeddb/connection-leak-private.html
> ASSERTION FAILED: m_resourceLoadStatistics > ..\..\Source\WebKit\NetworkProcess/NetworkSession.cpp(248) : setThirdPartyCookieBlockingMode > 1 00007FF926951429 WTFCrash > 2 00007FF919A21F50 WTFCrashWithInfo > 3 00007FF91D8B74FD WebKit::NetworkSession::setThirdPartyCookieBlockingMode > 4 00007FF91D819878 WebKit::NetworkProcess::setShouldBlockThirdPartyCookiesForTesting > 5 00007FF91D4986A4 IPC::callMemberFunctionImpl<WebKit::NetworkProcess,void (WebKit::NetworkProcess::*)(PAL::SessionID, WebCore::ThirdPartyCookieBlockingMode, WTF::CompletionHandler<void ()> &&),void (),std::tuple<PAL::SessionID,WebCore::ThirdPartyCookieBlockingMode>,0,1> > 6 00007FF91D496A14 IPC::callMemberFunction<WebKit::NetworkProcess,void (WebKit::NetworkProcess::*)(PAL::SessionID, WebCore::ThirdPartyCookieBlockingMode, WTF::CompletionHandler<void ()> &&),void (),std::tuple<PAL::SessionID,WebCore::ThirdPartyCookieBlockingMode>,std::integer_sequence<unsigned long long,0,1> > > 7 00007FF91D432B33 IPC::handleMessageAsync<Messages::NetworkProcess::SetShouldBlockThirdPartyCookiesForTesting,WebKit::NetworkProcess,void (WebKit::NetworkProcess::*)(PAL::SessionID, WebCore::ThirdPartyCookieBlockingMode, WTF::CompletionHandler<void ()> &&)> > 8 00007FF91D427021 WebKit::NetworkProcess::didReceiveNetworkProcessMessage > 9 00007FF91D81278C WebKit::NetworkProcess::didReceiveMessage > 10 00007FF91DA3B9F6 IPC::Connection::dispatchMessage > 11 00007FF91DA3C0DB IPC::Connection::dispatchMessage > 12 00007FF91DA3C78B IPC::Connection::dispatchOneIncomingMessage > 13 00007FF91DA3F50C IPC::Connection::enqueueIncomingMessage::<unnamed-tag>::operator() > 14 00007FF91DA3F467 WTF::Detail::CallableWrapper<`lambda at ..\..\Source\WebKit\Platform\IPC\Connection.cpp:981:30',void>::call > 15 00007FF9269645D0 WTF::Function<void ()>::operator() > 16 00007FF9269C0BBC WTF::RunLoop::performWork > 17 00007FF926A8D4D5 WTF::RunLoop::wndProc > 18 00007FF926A8D3E9 WTF::RunLoop::RunLoopWndProc > 19 00007FF947735C0D CallWindowProcW > 20 00007FF947735602 DispatchMessageW > 21 00007FF926A8D6F3 WTF::RunLoop::run > 22 00007FF91D2DFD8B WebKit::AuxiliaryProcessMain<WebKit::NetworkProcess,WebKit::NetworkProcessMainCurl> > 23 00007FF91D2DFB1B WebKit::NetworkProcessMain > 24 00007FF7D6CE101C main > 25 00007FF7D6CE123C __scrt_common_main_seh > 26 00007FF948FF7BD4 BaseThreadInitThunk > 27 00007FF94914CED1 RtlUserThreadStart > LEAK: 20 WebPageProxy
Attachments
Patch
(3.08 KB, patch)
2020-03-29 23:29 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Patch
(17.03 KB, patch)
2020-03-30 19:30 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Patch
(17.33 KB, patch)
2020-03-30 20:09 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Patch
(17.51 KB, patch)
2020-03-30 20:56 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Patch
(17.56 KB, patch)
2020-03-30 21:09 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Patch
(17.38 KB, patch)
2020-03-30 22:51 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2020-03-29 23:29:18 PDT
Created
attachment 394889
[details]
Patch
youenn fablet
Comment 2
2020-03-30 05:21:41 PDT
Comment on
attachment 394889
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=394889&action=review
> Source/WebKit/UIProcess/WebsiteData/WebsiteDataStore.cpp:2221 > + };
There is a lot of code shared with WebsiteDataStoreParameters WebsiteDataStore::parameters() in WebsiteDataStoreCocoa.mm. Can we try sharing it? GTP seems to have an issue with hasStatisticsTestingCallback.
Fujii Hironori
Comment 3
2020-03-30 17:59:13 PDT
Comment on
attachment 394889
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=394889&action=review
>> Source/WebKit/UIProcess/WebsiteData/WebsiteDataStore.cpp:2221 >> + }; > > There is a lot of code shared with WebsiteDataStoreParameters WebsiteDataStore::parameters() in WebsiteDataStoreCocoa.mm. > Can we try sharing it? > GTP seems to have an issue with hasStatisticsTestingCallback.
Good idea. Will do so.
Fujii Hironori
Comment 4
2020-03-30 19:30:31 PDT
Created
attachment 395005
[details]
Patch
Fujii Hironori
Comment 5
2020-03-30 20:09:43 PDT
Created
attachment 395009
[details]
Patch
Fujii Hironori
Comment 6
2020-03-30 20:56:44 PDT
Created
attachment 395012
[details]
Patch
Fujii Hironori
Comment 7
2020-03-30 21:09:32 PDT
Created
attachment 395013
[details]
Patch
Fujii Hironori
Comment 8
2020-03-30 22:51:26 PDT
Created
attachment 395017
[details]
Patch
Fujii Hironori
Comment 9
2020-03-31 17:05:33 PDT
Comment on
attachment 395017
[details]
Patch Clearing flags on attachment: 395017 Committed
r259323
: <
https://trac.webkit.org/changeset/259323
>
Fujii Hironori
Comment 10
2020-03-31 17:05:37 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11
2020-03-31 17:08:47 PDT
<
rdar://problem/61131748
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug