Deduplicate WebsiteDataStore::parameters() of Cocoa port and non-Cocoa port https://bugs.webkit.org/show_bug.cgi?id=209644

Reviewed by Youenn Fablet.

WinCairo WTR was failing an assertion ensuring
ResourceLoadStatistics was enabled in
NetworkSession::setThirdPartyCookieBlockingMode while running
LayoutTests with useEphemeralSession=true becuase
ResourceLoadStatisticsParameters was not set in
WebsiteDataStoreParameters.

* UIProcess/WebsiteData/Cocoa/WebsiteDataStoreCocoa.mm:
(WebKit::WebsiteDataStore::platformSetNetworkParameters): Added.
(WebKit::WebsiteDataStore::parameters): Deleted.
* UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::WebsiteDataStore::parameters):
* UIProcess/WebsiteData/WebsiteDataStore.h:

Canonical link: https://commits.webkit.org/222755@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259323 268f45cc-cd09-0410-ab3c-d52691b4dbfc